--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^15.3.0",
     "@react-native-firebase/auth": "^15.3.0",
+    "@react-native-firebase/storage": "^15.3.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -20,6 +21,7 @@
     "react-hook-form": "^7.34.2",
     "react-native": "0.69.4",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-image-picker": "^4.9.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0",
     "react-native-vector-icons": "^9.2.0"
