--- a/package.json
+++ b/package.json
@@ -10,21 +10,27 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/cli": "^9.0.0",
     "@react-native-firebase/app": "^15.3.0",
     "@react-native-firebase/auth": "^15.3.0",
     "@react-native-firebase/firestore": "^15.3.0",
+    "@react-native-firebase/messaging": "^15.3.0",
     "@react-native-firebase/storage": "^15.3.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
+    "firebase-admin": "^11.0.1",
     "react": "18.0.0",
     "react-hook-form": "^7.34.2",
     "react-native": "0.69.4",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-image-picker": "^4.9.0",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.16.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
@@ -34,6 +40,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.69.3",
+    "@types/react-native-push-notification": "^8.1.1",
     "@types/react-native-vector-icons": "^6.4.11",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
